--- a/package.json
+++ b/package.json
@@ -5,21 +5,31 @@
   "type": "module",
   "scripts": {
     "dev": "run-p vite:dev api:dev",
-    "vite:dev": "vite",
-    "api:dev": "tsx watch api/main.ts",
-    "build": "tsc -b && vite build && tsc api/main.ts --outDir dist --esModuleInterop --target ES2022 --module node16 --moduleResolution node16",
-    "start": "node dist/main.js",
+    "vite:dev": "vite --host",
+    "api:dev": "tsx watch src/api/main.ts",
+    "build": "tsc -b && vite build",
+    "start": "tsx src/api/main.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "express": "^5.1.0",
+    "express-ws": "^5.0.2",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/express": "^5.0.3",
+    "@types/express-ws": "^3.0.5",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
@@ -29,6 +39,7 @@
     "globals": "^16.3.0",
     "npm-run-all": "^4.1.5",
     "tsx": "^4.20.4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
